<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TrabajoGrupal</string>
    <string name="salir">SALIR</string>
    <string name="_00000000">00000000</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="multiply">*</string>
    <string name="dot">.</string>
    <string name="del"><![CDATA[<-]]></string>
    <string name="hombre">HOMBRE</string>
    <string name="mujer">MUJER</string>
    <string name="altura">ALTURA</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="ce">CE</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="product">×</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="delete"><![CDATA[<]]></string>
    <string name="point">.</string>
    <string name="back">x</string>
    <string name="peso">PESO</string>
    <string name="edad">EDAD</string>
    <string name="pesoBase">60</string>
    <string name="edadBase">30</string>
    <string name="TitleMainMenu">MENU PRINCIPAL</string>
    <string name="BtnCalcAdri">CALCULADORA ADRIAN</string>
    <string name="BtnCalcCarlos">CALCULADORA CARLOS</string>
    <string name="BtnCalcCurro">CALCULADORA CURRO</string>
    <string name="BtnCalcIMC">CALCULADORA IMC</string>
    <string name="BtnExit">SALIR</string>
    <string name="calcular">calcular</string>
    <string name="mostrarresultadoimc">resultadoImc</string>
    <string name="mostrarvaloracion">mostrarValoracion</string>
    <string name="title">Calculadora Adrian</string>
    <string name="BtnNum3">3</string>
    <string name="BtnNum2">2</string>
    <string name="BtnNum4">4</string>
    <string name="BtnNum5">5</string>
    <string name="BtnNum6">6</string>
    <string name="BtnNum7">7</string>
    <string name="BtnNum8">8</string>
    <string name="BtnNum9">9</string>
    <string name="BtnNum0">0</string>
    <string name="BtnC">C</string>
    <string name="BtnSum">+</string>
    <string name="BtnRest">-</string>
    <string name="BtnDiv">/</string>
    <string name="BtnMult">x</string>
    <string name="BtnEq">=</string>
    <string name="BtnNum1">1</string>
    <string name="BtnOpPoint">.</string>
    <string name="BtnOpCE">CE</string>
    <string name="OutputMainbox">%1$s</string>
    <string name="OutputDetailbox">%1$s</string>
</resources>