<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Carlos.CarlosActivity"
    android:padding="8dp"
    >
    <LinearLayout
        android:id="@+id/rowResults"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_marginTop="0dp"
                android:layout_width="60sp"
                android:layout_height="70dp"
                android:text="@string/back"
                android:textSize="50sp"
                android:gravity="start"
                android:textAlignment="gravity"
                style="?android:attr/buttonBarButtonStyle"/>

            <TextView
                android:id="@+id/textMemoryNumbers"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text=""
                android:gravity="end|bottom"
                android:textSize="30sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textNumbers"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text=""
            android:gravity="end|bottom"
            android:textSize="60sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/allButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/rowResults"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="20dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ce"
                android:layout_width="190sp"
                android:layout_height="match_parent"
                android:text="@string/ce"
                android:layout_marginHorizontal="0sp"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/delete"
                android:layout_marginHorizontal="0sp"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/delete"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/divide"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/seven"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:textSize="60sp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/product"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/product"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/four"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/five"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/six"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/minus"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="0sp"
            android:paddingHorizontal="0sp"
            >
            <Button
                android:id="@+id/one"
                android:layout_width="90sp"
                android:text="@string/one"
                android:layout_height="match_parent"
                android:textSize="60sp"
                android:layout_marginHorizontal="0sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/two"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:textSize="60sp"
                android:layout_marginHorizontal="0sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/three"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:textSize="60sp"
                android:layout_marginHorizontal="0sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/plus"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:textSize="60sp"
                android:layout_marginHorizontal="0sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fifthRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero"
                android:layout_width="190sp"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/point"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/point"
                android:textAlignment="center"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/equal"
                android:layout_width="95sp"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:textAlignment="center"
                android:textSize="60sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>