<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:background="#A90AC5"
        android:gravity="center"
        android:text="@string/TitleMainMenu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalcAdri"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="72dp"
        android:text="@string/BtnCalcAdri"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/btnCalcCarlos"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:text="@string/BtnCalcCarlos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalcAdri"/>

    <Button
        android:id="@+id/btnCalcCurro"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:text="@string/BtnCalcCurro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalcCarlos" />

    <Button
        android:id="@+id/btnCalcIMC"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:text="@string/BtnCalcIMC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalcCurro" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:text="@string/BtnExit"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalcIMC" />

</androidx.constraintlayout.widget.ConstraintLayout>