<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity"
    android:backgroundTint="@color/material_dynamic_primary60">


    <androidx.cardview.widget.CardView
        android:id="@+id/todo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/material_dynamic_primary60"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/fotoResult"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="@id/todo"
            app:layout_constraintEnd_toEndOf="@id/todo"
            app:layout_constraintTop_toTopOf="@id/todo"
            android:layout_marginTop="100dp"

            />
        <TextView
            android:id="@+id/resutlImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fotoResult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:text="@string/mostrarresultadoimc"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"

            />
        <TextView
            android:id="@+id/rangoImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resutlImc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:text="@string/mostrarvaloracion"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            />
            <Button
                android:id="@+id/salir"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/rangoImc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/material_dynamic_primary60"
                android:text="@string/salir"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>